--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
         </div>
       </mat-toolbar>
       <!-- <mat-sidenav-content> -->
-        <div class="container-fluid">
+        <div class="container-fluid px-0">
           <router-outlet></router-outlet>
         </div>
       <!-- </mat-sidenav-content> -->
