--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 // Add imports for other components in your app.
 @import '../node_modules/@angular/material/theming';
 @import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~ngx-toastr/toastr';
 
 // Imports functions, variables, and mixins that are needed by other Bootstrap files
 @import "variables";
