--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -23,6 +23,10 @@
   min-width: 35px !important;
 }
 
+.spacer {
+  flex-grow: 1;
+}
+
 // .sidenav-container {
 //   display: flex;
 //   flex-direction: column;
