--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -29,12 +29,12 @@
             <!-- Checkbox Column -->
             <ng-container matColumnDef="select">
               <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+                <mat-checkbox color="primary" (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
                   [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
                 </mat-checkbox>
               </th>
               <td mat-cell *matCellDef="let row; let i = index">
-                <mat-checkbox *ngIf="!row.empty" (click)="$event.stopPropagation()" (change)="setSelectionState($event, row)" 
+                <mat-checkbox color="primary" *ngIf="!row.empty" (click)="$event.stopPropagation()" (change)="setSelectionState($event, row)" 
                   [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
                 </mat-checkbox>
               </td>
@@ -81,7 +81,7 @@
                 <button class="p-0" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
                 <mat-menu #menu="matMenu">
                   <button mat-menu-item>Share</button>
-                  <button mat-menu-item (click)="downloadItem(row.name)">Download</button>
+                  <button mat-menu-item (click)="downloadItem(row.name)" download>Download</button>
                   <button mat-menu-item>Star</button>
                   <button mat-menu-item>Rename</button>
                   <button mat-menu-item>Move</button>
