--- a/src/app/modules/dashboard/components/upload-details/upload-details.component.html
+++ b/src/app/modules/dashboard/components/upload-details/upload-details.component.html
@@ -1,62 +1,60 @@
-<div class="container-fluid d-flex flex-column">
+<div class="container-fluid">
     <div class="row">
         <div class="col px-0">
-            <h2 mat-dialog-title>
-                Upload Details
-            </h2>
-        </div>
-    </div>
-    <div class="row mb-3">
-        <div class="col px-0">
+            <h2 class="m-0">Upload Details</h2>
             <mat-divider></mat-divider>
         </div>
     </div>
     <div class="row">
         <div class="col px-0 file-list">
-            <!-- <div *ngIf="isFileSet; then fileList; else message"></div> -->
-            <div mat-dialog-content>
-                <mat-list #fileList>
-                    <mat-list-item *ngFor="let item of (files$ | async); index as i" class="px-0">
-                        <div class="container-fluid px-0">
-                            <div class="row">
-                                <div class="col-6 pl-0">
-                                    <div class="list-name">{{ item.file.name }}</div>
-                                </div>
-                                <div class="col-4">
-                                    {{ item.file.size | fileSize }}
-                                </div>
-                                <div class="col-auto ml-auto pr-0">
-                                    <div *ngIf="item.completed; then done; else loading"></div>
-                                </div>
+            <mat-list #fileList>
+                <mat-list-item *ngFor="let item of (files$ | async); index as i" class="px-0">
+                    <div class="container-fluid px-0">
+                        <div class="row">
+                            <div class="col-6 pl-0">
+                                <div class="list-name">{{ item.file.name }}</div>
                             </div>
-                            <div class="row">
-                                <div class="col">
-                                    <upload-progress [progress]="item.progress" [key]="i"></upload-progress> <!--  -->
-                                </div>
+                            <div class="col-4">
+                                {{ item.file.size | fileSize }}
+                            </div>
+                            <div class="col-auto ml-auto pr-0">
+                                <!-- <div *ngIf="(completed$ | async) as completed; then done; else loading"></div> -->
+                                <ng-container [ngTemplateOutlet]="item.file.progress === 100 ? done : loading" [ngTemplateOutletContext]="{ index: i, progressColor: item.file.progressColor }"></ng-container>
                             </div>
                         </div>
-                    </mat-list-item>
-                </mat-list>
-            </div>
+                        <div class="row">
+                            <div class="col">
+                                <upload-progress [progress]="item.progress" [key]="i" [color]="getProgressColor$(i) | async"></upload-progress>
+                            </div>
+                        </div>
+                    </div>
+                </mat-list-item>
+            </mat-list>
         </div>
     </div>
-    <div class="row mt-3">
-        <div class="col-auto px-0 ml-auto mt-auto">
+    <div class="row mt-3 p-2">
+        <div class="col-auto ml-auto mt-auto">
             <input hidden multiple type="file" (change)="uploadFiles($event)" #uploader>
-            <button mat-flat-button color="primary" class="ml-2" (click)="uploader.click()">Add more files</button>
-            <button mat-button class="mr-2" (click)="closeDialog()">Done</button>
+            <button mat-raised-button color="primary" class="ml-2" (click)="uploader.click()">Add more files</button>
+            <button mat-raised-button class="ml-2" (click)="closeDialog()">Done</button>
         </div>
     </div>
 </div>
 
-<ng-template #done>
-    <mat-icon color="primary">check_circle_outline</mat-icon>
+<ng-template let-color="progressColor" #done>
+    <mat-icon [color]="color">check_circle_outline</mat-icon>
 </ng-template>
-<ng-template #loading>
-    <button mat-icon-button class="mr-0 px-0" (click)="cancelUpload()">
+
+
+<ng-template let-index="index" #loading>
+    <button mat-icon-button class="mr-0 px-0" (click)="cancelUpload(index)">
         <mat-icon>close</mat-icon>
     </button>
 </ng-template>
+
+
+
+
 
 <!-- <ng-template #fileList>
     <div mat-dialog-content>
