--- a/src/app/modules/dashboard/components/new-folder/new-folder.component.html
+++ b/src/app/modules/dashboard/components/new-folder/new-folder.component.html
@@ -26,7 +26,7 @@
                     <mat-list>
                         <h3 mat-subheader class="px-0 pb-1">Who has access</h3>
                         <mat-divider class="mb-2"></mat-divider>
-                        <mat-radio-group formControlName="Accessibility" [value]="0" (change)="setMode($event)">
+                        <mat-radio-group color="primary" formControlName="Accessibility" [value]="0" (change)="setMode($event)">
                             <mat-radio-button [value]="0" class="mb-2">
                                 <mat-list-item>
                                     <h4 mat-line>Only You</h4>
