--- a/src/app/modules/dashboard/components/main/main.component.less
+++ b/src/app/modules/dashboard/components/main/main.component.less
@@ -15,3 +15,13 @@ mat-form-field {
 .mat-icon {
   font-size: 45px;
 }
+
+.thumbnail {
+  width: 120px;
+}
+
+.thumbnail-title {
+  // word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
