--- a/src/app/modules/dashboard/components/repository/repository.component.less
+++ b/src/app/modules/dashboard/components/repository/repository.component.less
@@ -135,3 +135,32 @@ a.folder-node {
 .mat-menu-item {
   height: 40px;
 }
+
+// grid mode styles
+
+.grid-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 78px;
+}
+
+.grid-view-btn {
+  margin-right: 10px;
+}
+
+.grid-view-title {
+  margin-left: 50px;
+  margin-bottom: 0;
+}
+
+// .grid-file-title {
+//   word-wrap: break-word;
+// }
+
+.thumbnail-title {
+  // word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
