--- a/src/app/modules/notifications/pages/notifications/notifications.component.less
+++ b/src/app/modules/notifications/pages/notifications/notifications.component.less
@@ -13,3 +13,19 @@
     justify-content: center;
     // height: 50px;
 }
+
+.notification-container {
+    overflow-y: scroll;
+}
+
+.notification-actions {
+    position: sticky;
+    bottom: 0;
+    background-color: white;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.container-fluid {
+    max-height: 600px;
+}
