--- a/src/app/modules/dashboard/components/file-actions/file-actions.component.html
+++ b/src/app/modules/dashboard/components/file-actions/file-actions.component.html
@@ -3,7 +3,7 @@
 <ng-template #actionCard>
     <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
 
-    <mat-card class="mat-elevation-z2 action-card px-0">
+    <mat-card class="mat-elevation-z2 px-0">
         <mat-action-list>
             <!-- <button mat-list-item class="px-3" color="primary">Create new file</button> -->
             <button mat-list-item (click)="uploader.click()"> <mat-icon class="mr-2">cloud_upload</mat-icon> Upload files</button>
@@ -15,10 +15,11 @@
 </ng-template>
 
 <ng-template #selectedActionCard>
-    <mat-card class="mat-elevation-z2 action-card px-0">
-        <button class="px-3" mat-button color="primary">Download</button>
-        <button class="px-3" mat-button >Rename</button>
-        
-        <button class="px-3" mat-button (click)="deleteItem(1, row)">Delete</button>
+    <mat-card class="mat-elevation-z2 px-0">
+        <mat-action-list>
+            <button mat-list-item><mat-icon class="mr-2">cloud_download</mat-icon>Download</button>
+            <button mat-list-item><mat-icon class="mr-2">text_format</mat-icon>Rename</button>
+            <button mat-list-item (click)="deleteItem(1, row)"><mat-icon class="mr-2">close</mat-icon>Delete</button>
+        </mat-action-list>
     </mat-card>
 </ng-template>
