--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div hidden>
-    <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection" [userId]="userId" [userName]="userName"></file-actions>
+    <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection" [userId]="userId" [userName]="userName$ | async"></file-actions>
   </div>
   
   <div class="row">
@@ -25,87 +25,171 @@
       
         <div class="table-container">
       
-          <table mat-table [dataSource]="dataSource" class="example-table" matSort > <!-- matSortActive="createdDate" matSortDirection="desc" -->
-            <!-- Checkbox Column -->
-            <ng-container matColumnDef="select">
-              <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox color="primary" (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-                  [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-                </mat-checkbox>
-              </th>
-              <td mat-cell *matCellDef="let row; let i = index">
-                <mat-checkbox color="primary" *ngIf="!row.empty" (click)="$event.stopPropagation()" (change)="setSelectionState($event, row)" 
-                  [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
-                </mat-checkbox>
-              </td>
-            </ng-container>
-            
-            
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
-              <td mat-cell *matCellDef="let row" class="text-truncate"> {{ row.name }}</td> <!-- <img [src]="getIcon(row)"> -->
-            </ng-container>
-      
-            <!-- Date Created Column -->
-            <ng-container matColumnDef="createdDate">
-              <th mat-header-cell mat-sort-header arrowPosition="before" class="text-left" *matHeaderCellDef>Date Created</th>
-              <td mat-cell *matCellDef="let row">{{ row.creationDate | date : "short" }}</td>
-            </ng-container>
-      
-            <!-- Members Column -->
-            <ng-container matColumnDef="members">
-              <th mat-header-cell mat-sort-header arrowPosition="before" *matHeaderCellDef>Members</th>
-              <td mat-cell *matCellDef="let row">{{ row.isShared ? "Members" : "Only Me" }}</td>
-            </ng-container>
+          <!-- <div *ngIf="displayMode; then list; else grid"></div> -->
 
-            <!-- Action Column -->
-            <ng-container matColumnDef="action">
-              <th mat-header-cell *matHeaderCellDef>
-                <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
-                <button mat-icon-button class="p-0"><mat-icon>list</mat-icon></button>
-                <button *ngIf="isXS" class="p-0" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu">
-                  <mat-icon>more_vert</mat-icon>
-                </button>
-                <mat-menu #menu="matMenu">
-                  <button *ngIf="!rowSelected" mat-menu-item (click)="uploader.click()"><mat-icon class="mr-2">cloud_upload</mat-icon> Upload files</button>
-                  <button *ngIf="!rowSelected" mat-menu-item (click)="createNewFolder()"><mat-icon class="mr-2">create_new_folder</mat-icon>New Folder</button>
-                  <button *ngIf="rowSelected" mat-menu-item>Star</button>
-                  <button *ngIf="rowSelected" mat-menu-item>Rename</button>
-                  <button *ngIf="rowSelected" mat-menu-item>Move</button>
-                  <button *ngIf="rowSelected" mat-menu-item>Copy</button>
-                  <button *ngIf="rowSelected" mat-menu-item (click)="deleteItem(1, row)">Delete</button>
-                </mat-menu>
-              </th>
-              <td mat-cell *matCellDef="let row">
-                <button class="p-0" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
-                <mat-menu #menu="matMenu">
-                  <button mat-menu-item>Share</button>
-                  <button mat-menu-item (click)="downloadItem(row.name)" download>Download</button>
-                  <button mat-menu-item>Star</button>
-                  <button mat-menu-item>Rename</button>
-                  <button mat-menu-item>Move</button>
-                  <button mat-menu-item>Copy</button>
-                  <button mat-menu-item (click)="deleteItem(0, row)">Delete</button>
-                </mat-menu>
-              </td>
-            </ng-container>
-      
-            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getFolderContents(row)"></tr>
-          </table>
-          <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" ></mat-paginator> <!-- [length]="resultsLength" [pageSize]="30" -->
+          <div [ngSwitch]="displayMode">
+            <div *ngSwitchCase="0">
+              <ng-container *ngTemplateOutlet="list"></ng-container>
+            </div>
+            <div *ngSwitchCase="1">
+              <ng-container *ngTemplateOutlet="grid"></ng-container>
+            </div>
+            <!-- <div *ngSwitchCase="2">
+              <ng-container *ngTemplateOutlet="list"></ng-container>
+            </div> -->
+          </div>
+
         </div>
       </div>
     </div>
     <!-- right side column: Appears when the viewport size is medium or large -->
 
-    <div class="col-lg-2 col-md-2 col-sm-12 col-12 pl-0 action-sidebar" *ngIf="!isXS">
-      <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection" [userId]="userId" [userName]="userName"></file-actions>
+    <div class="col-lg-2 col-md-2 col-sm-12 col-12 pl-0" *ngIf="!isXS">
+      <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection" [userId]="userId" [userName]="(userName$ | async)"></file-actions>
     </div>
   </div>
 </div>
 
 
+<ng-template #grid>
+  
+  <div class="row grid-row">
+    <div class="col">
+      <h5 class="grid-view-title">Name</h5>
+    </div>
+    <div class="col-auto ml-auto">
+      <button mat-icon-button class="grid-view-btn" [matMenuTriggerFor]="displayMenu">
+        <mat-icon>list</mat-icon>
+      </button>
+      <mat-menu #displayMenu="matMenu">
+        <button (click)="setTableViewState($event, 0)" mat-menu-item>
+          <mat-icon class="mr-2">list</mat-icon>List
+        </button>
+        <button (click)="setTableViewState($event, 1)" mat-menu-item>
+          <mat-icon class="mr-2 large-grid">grid_on</mat-icon>Large
+        </button>
+        <!-- <button (click)="setTableViewState($event, 2)" mat-menu-item>
+          <mat-icon class="mr-2 small-grid">grid_on</mat-icon>Small
+        </button> -->
+      </mat-menu>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <mat-divider></mat-divider>
+    </div>
+  </div>
+  <div class="container-fluid m-3">
+    <div class="row">
+      <div class="col-lg-2 col-md-2 col-sm-3 col-3" *ngFor="let item of dataSource.data; index as i">
+        <div class="thumbnail">
+          <img [src]="item.thumbnail">
+          <p class="thumbnail-title">{{ item.name }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
 
 
+
+<ng-template #list>
+  <table mat-table [dataSource]="dataSource" class="example-table" matSort>
+    <!-- matSortActive="createdDate" matSortDirection="desc" -->
+    <!-- Checkbox Column -->
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox color="primary" (change)="$event ? masterToggle() : null"
+          [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()"
+          [aria-label]="checkboxLabel()">
+        </mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let row; let i = index">
+        <mat-checkbox color="primary" *ngIf="!row.empty" (click)="$event.stopPropagation()"
+          (change)="setSelectionState($event, row)" [checked]="selection.isSelected(row)"
+          [aria-label]="checkboxLabel(row)">
+        </mat-checkbox>
+      </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let row" class="text-truncate">{{ row.name }}</td>
+    </ng-container>
+  
+    <!-- Date Created Column -->
+    <ng-container matColumnDef="createdDate">
+      <th mat-header-cell mat-sort-header arrowPosition="before" class="text-left" *matHeaderCellDef>Date Created</th>
+      <td mat-cell *matCellDef="let row">{{ row.creationDate | date : "short" }}</td>
+    </ng-container>
+  
+    <!-- Members Column -->
+    <ng-container matColumnDef="members">
+      <th mat-header-cell mat-sort-header arrowPosition="before" *matHeaderCellDef>Members</th>
+      <td mat-cell *matCellDef="let row">{{ row.isShared ? "Members" : "Only Me" }}</td>
+    </ng-container>
+  
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>
+
+        <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
+
+        <button mat-icon-button class="p-0" [matMenuTriggerFor]="displayMenu">
+          <mat-icon>list</mat-icon>
+        </button>
+
+        <button *ngIf="isXS" class="p-0" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+  
+        <mat-menu #menu="matMenu">
+          <button *ngIf="!rowSelected" mat-menu-item (click)="uploader.click()">
+            <mat-icon class="mr-2">cloud_upload</mat-icon> Upload files
+          </button>
+          <button *ngIf="!rowSelected" mat-menu-item (click)="createNewFolder()">
+            <mat-icon class="mr-2">create_new_folder</mat-icon>New Folder
+          </button>
+          <button *ngIf="rowSelected" mat-menu-item>Star</button>
+          <button *ngIf="rowSelected" mat-menu-item>Rename</button>
+          <button *ngIf="rowSelected" mat-menu-item>Move</button>
+          <button *ngIf="rowSelected" mat-menu-item>Copy</button>
+          <button *ngIf="rowSelected" mat-menu-item (click)="deleteItem(1, row)">Delete</button>
+        </mat-menu>
+  
+        <mat-menu #displayMenu="matMenu">
+          <button (click)="setTableViewState($event, 0)" mat-menu-item>
+            <mat-icon class="mr-2">list</mat-icon>List
+          </button>
+          <button (click)="setTableViewState($event, 1)" mat-menu-item>
+            <mat-icon class="mr-2 large-grid">grid_on</mat-icon>Large
+          </button>
+          <!-- <button (click)="setTableViewState($event, 2)" mat-menu-item>
+            <mat-icon class="mr-2 small-grid">grid_on</mat-icon>Small
+          </button> -->
+        </mat-menu>
+  
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <button class="p-0" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item>Share</button>
+          <button mat-menu-item (click)="downloadItem(row.name)" download>Download</button>
+          <button mat-menu-item>Star</button>
+          <button mat-menu-item>Rename</button>
+          <button mat-menu-item>Move</button>
+          <button mat-menu-item>Copy</button>
+          <button mat-menu-item (click)="deleteItem(0, row)">Delete</button>
+        </mat-menu>
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getFolderContents(row)"></tr>
+  
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"></mat-paginator> <!-- [length]="resultsLength" [pageSize]="30" -->
+</ng-template>
