Added interactive badge, where viewing notifications will hide the badge, and update the corresponding database property. Removed static text from account button in navigation, and replaced with dynamic text based on the users first and last name. Fixed bug where navigation elements were not being hidden after the user has logged out

--- a/src/app/modules/notifications/pages/notifications/notifications.component.html
+++ b/src/app/modules/notifications/pages/notifications/notifications.component.html
@@ -82,7 +82,7 @@
                 
             </div>
         </div>
-        <div class="row mt-2 notification-actions" *ngIf="!notificationState">
+        <div class="row mt-2 notification-actions" *ngIf="!isEmpty">
             <div class="col">
                 <!-- <mat-divider class="mx-2" *ngIf="!notificationState"></mat-divider> -->
                 <button mat-raised-button color="primary" (click)="deleteAllNotifications($event)"><mat-icon class="mr-2">clear</mat-icon>Clear</button>
