--- a/src/app/modules/dashboard/components/file-thumbnail/file-thumbnail.component.less
+++ b/src/app/modules/dashboard/components/file-thumbnail/file-thumbnail.component.less
@@ -16,10 +16,11 @@
 
 .thumbnail {
     display: flex;
-    height: 150px;
-    max-width: 150px;
-    object-fit: fill;
+    height: 160px;
+    max-width: 160px;
+    object-fit: contain;
     background-size: cover;
+    background-position: center;
     margin-right: 10px;
     margin-left: 10px;
 }
@@ -61,6 +62,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     justify-content: center;
+    align-items: center
 }
 
 .tn-title {
