--- a/src/app/modules/dashboard/components/main/main.component.less
+++ b/src/app/modules/dashboard/components/main/main.component.less
@@ -16,11 +16,6 @@ mat-form-field {
   font-size: 45px;
 }
 
-
-.thumbnail-container {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch; 
-  -ms-overflow-style: -ms-autohiding-scrollbar;
+.empty-content {
+  padding-left: 20px;
 }
