--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -75,7 +75,7 @@
     </div>
   </div>
   <div class="thumbnail-container">
-    <file-thumbnail flexboxFiles
+    <file-thumbnail
       [mode]="0"
       [files]="files$ | async"
     ></file-thumbnail>
